# http_overeasy

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: python-tests.yml
examples/: README.md  get_text.py  post_payloads.py
src/http_overeasy/: client_mocker.py  http_client.py  response.py
tests/: client_mocker_test.py  http_client_test.py  response_test.py  resthttp_test.py
